<resources>
    <string name="app_name">TGA</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="API_key">AIzaSyDw7-WKfbu2dYFhwxHHE5ik-9ykaUeGdPE</string>
    <string name="SERVER_KEY">AIzaSyCmCOZBZR4VugM013zdD0Li8sxjs8VXEnI</string>
    <string name="country_prompt">Choose a country</string>
    <!--AIzaSyB_7KprS66Hcih9Rfnu05ssVPRdvOdVVy4-->
    <!--Main=AIzaSyAngLhRf_i9ZoagGX0DllBZHlPkaKfAEzY-->
    <!--AIzaSyBtkj7v5ZoRr8iX013LBBj5wt58i_gydM0-->
    <!--NewMain=AIzaSyA02qeaptiL2YJ2P9CjHRrLhkkzO3cL7NM-->
    <string name="facebook_app_id">452104048552423</string>
    <string name="fb_login_protocol_scheme">fb452104048552423</string>

    <string name="GooglePlacesApi">AIzaSyA02qeaptiL2YJ2P9CjHRrLhkkzO3cL7NM</string>
    <string name="places">https://maps.googleapis.com/maps/api/place/textsearch/xml?query=airport+or+food+in+Cairo&amp;key=AIzaSyAngLhRf_i9ZoagGX0DllBZHlPkaKfAEzY</string>

    <string-array name="country_arrays">
        <item>Egypt</item>
        <item>United States</item>
        <item>France</item>
        <item>Italy</item>
        <item>India</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="userName"> Full Name</string>
    <string name="userLocation">Nationality</string>
    <string name="userMobile">Mobile</string>
    <string name="userEmail">Email</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Favourites</item>
        <item>Settings</item>
        <item>Privacy</item>
        <item>Contact Us</item>
        <item>About Us</item>

    </string-array>
    <string name="title_activity_map_view">MapViewActivity</string>
    <string name="title_activity_reports">Reports</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
