<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff">




    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:orientation="vertical"-->
    <!--android:background="#fff">-->
    <!--<include layout="@layout/toolbar"/>-->


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fff"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/userProfilePhoto"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:scaleType="centerCrop"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_perm_identity_black_24dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/userName"
                                android:layout_marginLeft="5dp"
                                android:textSize="14dp"
                                android:textColor="#000"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/round"
                                android:text="Edit"
                                android:textColor="#fff"
                                android:padding="8dp"
                                android:layout_marginLeft="50dp"
                                android:gravity="right"
                                android:layout_gravity="right"
                                />
                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="name"
                            android:textColor="#7000"
                            android:textSize="14dp"
                            android:padding="5dp"
                            android:layout_marginLeft="3dp"
                            android:textColorHint="#000"
                            android:background="#00000000"
                            android:id="@+id/userProfileName"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp">



                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/userLocation"
                                android:layout_marginLeft="10dp"
                                android:textSize="14dp"
                                android:textColor="#000"/>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="5dp"
                                    android:background="@drawable/ic_location_on_black_24dp"/>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Cairo"
                                    android:textSize="14dp"
                                    android:textColor="#7000"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginLeft="5dp"
                                    android:id="@+id/City"/>



                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_smartphone_black_24dp"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userMobile"
                        android:textSize="14dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+919429283901"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:padding="5dp"
                    android:layout_marginLeft="40dp"
                    android:id="@+id/userPhone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="45dp"
                    android:background="#ACACAC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/ic_email_black_24dp"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userEmail"
                        android:textSize="14dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"/>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="test@gmail.com"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:padding="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="40dp"
                    android:id="@+id/userEmail"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="45dp"
                    android:background="#ACACAC" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:text="Messages"
                    android:textColor="#fff"
                    android:padding="8dp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:text="Community"
                    android:textColor="#fff"
                    android:padding="8dp"
                    android:layout_marginLeft="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:text="History"
                    android:textColor="#fff"
                    android:padding="8dp"
                    android:layout_marginLeft="20dp"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
